# Fileman

./: CHANGELOGS.md  README.md  copy-msi.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
fileman-website/: package.json
fileman-website/.next/: app-build-manifest.json  prerender-manifest.json  trace
fileman-website/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  types.rs
src-tauri/src/sftp/: connection.rs  directory_operations.rs  file_operations.rs  mod.rs  storage_info.rs  utils.rs
src/components/: app-sidebar.tsx  process-panel.tsx  process-progress.tsx
src/dialogs/: create-bookmark.dialog.tsx  create-folder.dialog.tsx  delete-bookmark.dialog.tsx  delete-files.dialog.tsx  delete-session.dialog.tsx  downloads-set.dialog.tsx  file-info.dialog.tsx  rename-file.dialog.tsx  session-edit.dialog.tsx  session-selection.menu.tsx  session-wizard.dialog.tsx  settings.dialog.tsx
src/layout/: bookmarks.tsx  file-browser.tsx  footer.tsx  layout.tsx  path-bar.tsx  right-sidebar.tsx
src/models/: bookmark.model.ts  clipboarditem.model.ts  session.model.ts  tab.model.ts
src/stores/: bookmark.store.ts  clipboard.store.ts  config.store.ts  process.store.ts  session.store.ts  tab.store.ts
src/styles/: Dialog.css  globals-origin.css  globals.css
src/types/: ConnectionState.ts  Dialog.ts  FileItem.ts  process.ts
src/utils/: file.util.ts  storage.util.ts
(+93 files in other folders)
