[package]
name = "Fileman"
version = "0.1.0"
description = "Simple file manager for your SFTP servers"
authors = ["Akshay Jhajhra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
openssh-sftp-client = { version = "0.15.3"}
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
once_cell = "1.21.3"
tauri-plugin-opener = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

